# freebsd-ports-kde

./: MOVED
Mk/Uses/: kde.mk  pyqt.mk  qt-dist.mk  qt.mk
accessibility/kmag/: distinfo
accessibility/kmousetool/: distinfo
accessibility/kmouth/: distinfo
accessibility/qt5-speech/: Makefile  distinfo
accessibility/qt6-speech/: Makefile  distinfo
archivers/ark/: distinfo
astro/kosmindoormap/: distinfo
astro/marble/: Makefile  distinfo  pkg-plist
audio/: Makefile
audio/audiocd-kio/: distinfo
audio/elisa/: distinfo  pkg-plist
audio/juk/: distinfo
audio/kmix/: distinfo
audio/kwave/: distinfo
audio/libkcddb/: distinfo
audio/libkcompactdisc/: distinfo
audio/plasma5-kpipewire/: distinfo  pkg-plist
audio/plasma5-plasma-pa/: distinfo  pkg-plist
comms/qt5-connectivity/: Makefile  distinfo
comms/qt5-sensors/: Makefile  distinfo
comms/qt5-serialbus/: Makefile  distinfo
comms/qt5-serialport/: Makefile  distinfo
comms/qt6-sensors/: Makefile  distinfo
comms/qt6-serialbus/: Makefile  distinfo
comms/qt6-serialport/: Makefile  distinfo
databases/: Makefile
databases/akonadi/: distinfo
databases/futuresql/: Makefile
databases/qt5-sql/: Makefile  distinfo
databases/qt5-sqldrivers-ibase/: distinfo
databases/qt5-sqldrivers-mysql/: distinfo
databases/qt5-sqldrivers-odbc/: distinfo
databases/qt5-sqldrivers-pgsql/: distinfo
databases/qt5-sqldrivers-sqlite2/: distinfo
databases/qt5-sqldrivers-sqlite3/: distinfo
databases/qt5-sqldrivers-tds/: distinfo
databases/qt6-base_sqldriver/: Makefile  distinfo
deskutils/akonadi-calendar-tools/: distinfo
deskutils/akonadi-import-wizard/: distinfo
deskutils/akonadiconsole/: distinfo  pkg-plist
deskutils/akregator/: distinfo
deskutils/grantlee-editor/: distinfo
deskutils/grantleetheme/: distinfo
deskutils/itinerary/: distinfo
deskutils/kaddressbook/: distinfo
deskutils/kalarm/: distinfo
deskutils/kalendar/: distinfo  pkg-plist
deskutils/kcharselect/: distinfo
deskutils/kdeconnect-kde/: distinfo
deskutils/kdepim-addons/: distinfo
deskutils/kdepim-runtime/: distinfo
deskutils/keditbookmarks/: distinfo
deskutils/kfind/: distinfo
deskutils/kmail/: distinfo  pkg-plist
deskutils/kmail-account-wizard/: distinfo
deskutils/knotes/: distinfo
deskutils/kontact/: distinfo  pkg-plist
deskutils/korganizer/: distinfo  pkg-plist
deskutils/kruler/: distinfo
deskutils/libkdepim/: distinfo
deskutils/mbox-importer/: distinfo
deskutils/merkuro/: distinfo
deskutils/pim-data-exporter/: distinfo
deskutils/pim-sieve-editor/: distinfo
deskutils/plasma5-milou/: distinfo  pkg-plist
deskutils/plasma5-sddm-kcm/: distinfo
deskutils/plasma5-xdg-desktop-portal-kde/: distinfo  pkg-plist
deskutils/zanshin/: distinfo  pkg-plist
devel/: Makefile
devel/anjuta/: Makefile
devel/cervisia/: distinfo
devel/dolphin-plugins/: distinfo
devel/kapptemplate/: distinfo
devel/kcachegrind/: distinfo
devel/kde-dev-scripts/: distinfo
devel/kde-dev-utils/: distinfo
devel/kdesdk-kio/: distinfo
devel/kdesdk-thumbnailers/: distinfo
devel/kdev-php/: distinfo
devel/kdev-python/: distinfo
devel/kdevelop/: Makefile  distinfo  pkg-plist
devel/kf5-kcmutils/: Makefile
devel/kf5-ki18n/: distinfo
devel/kf5-kservice/: distinfo
devel/kio-extras/: distinfo  pkg-plist
devel/lokalize/: distinfo
graphics/: Makefile
misc/: Makefile
multimedia/: Makefile
net/: Makefile
net-im/: Makefile
security/: Makefile
www/: Makefile
www/qt6-webengine/files/: patch-cmake_Functions.cmake  patch-configure.cmake  patch-src_3rdparty_chromium_BUILD.gn  patch-src_3rdparty_chromium_base_BUILD.gn  patch-src_3rdparty_chromium_base_allocator_allocator.gni  patch-src_3rdparty_chromium_base_allocator_allocator__shim__default__dispatch__to__glibc.cc  patch-src_3rdparty_chromium_base_allocator_allocator__shim__override__libc__symbols.h  patch-src_3rdparty_chromium_base_allocator_partition__allocator_address__pool__manager.cc  patch-src_3rdparty_chromium_base_allocator_partition__allocator_page__allocator__internals__posix.h  patch-src_3rdparty_chromium_base_allocator_partition__allocator_partition__alloc.cc  patch-src_3rdparty_chromium_base_allocator_partition__allocator_partition__root.cc  patch-src_3rdparty_chromium_base_allocator_partition__allocator_spinning__mutex.cc  patch-src_3rdparty_chromium_base_allocator_partition__allocator_spinning__mutex.h  patch-src_3rdparty_chromium_base_base__switches.cc  patch-src_3rdparty_chromium_base_base__switches.h  patch-src_3rdparty_chromium_base_bind.h  patch-src_3rdparty_chromium_base_check.h  patch-src_3rdparty_chromium_base_cpu.cc  patch-src_3rdparty_chromium_base_cpu.h  patch-src_3rdparty_chromium_base_debug_debugger__posix.cc  patch-src_3rdparty_chromium_base_debug_elf__reader.cc  patch-src_3rdparty_chromium_base_debug_proc__maps__linux.cc  patch-src_3rdparty_chromium_base_debug_stack__trace.cc  patch-src_3rdparty_chromium_base_debug_stack__trace.h  patch-src_3rdparty_chromium_base_debug_stack__trace__posix.cc  patch-src_3rdparty_chromium_base_files_file__path__watcher__freebsd.cc  patch-src_3rdparty_chromium_base_files_file__path__watcher__kqueue.h  patch-src_3rdparty_chromium_base_files_file__path__watcher__unittest.cc  patch-src_3rdparty_chromium_base_files_file__util.h  patch-src_3rdparty_chromium_base_files_file__util__posix.cc  patch-src_3rdparty_chromium_base_files_file__util__unittest.cc  patch-src_3rdparty_chromium_base_files_scoped__file.cc  patch-src_3rdparty_chromium_base_i18n_icu__util.cc  patch-src_3rdparty_chromium_base_linux__util.cc  patch-src_3rdparty_chromium_base_logging__unittest.cc  patch-src_3rdparty_chromium_base_memory_discardable__memory.cc  patch-src_3rdparty_chromium_base_memory_discardable__memory__internal.h  patch-src_3rdparty_chromium_base_memory_madv__free__discardable__memory__posix.cc  patch-src_3rdparty_chromium_base_memory_platform__shared__memory__region.h  patch-src_3rdparty_chromium_base_memory_platform__shared__memory__region__posix.cc  (+536 more)
x11/: Makefile
x11-themes/: Makefile
x11-toolkits/: Makefile
(+500 files in other folders)
