--- src/3rdparty/chromium/BUILD.gn.orig	2022-09-26 10:05:50 UTC
+++ src/3rdparty/chromium/BUILD.gn
@@ -55,7 +55,7 @@ declare_args() {
   qtwebengine_target = "//tools/gn"
 }
 
-if (is_official_build) {
+if (is_official_build && !is_bsd) {
   # An official (maximally optimized!) component (optimized for build times)
   # build doesn't make sense and usually doesn't work.
   assert(!is_component_build)
@@ -451,7 +451,7 @@ group("gn_all") {
     ]
   }
 
-  if (is_linux || is_chromeos || is_android) {
+  if ((is_linux && !is_bsd) || is_chromeos || is_android) {
     deps += [
       "//third_party/breakpad:breakpad_unittests",
       "//third_party/breakpad:core-2-minidump",
@@ -648,6 +648,16 @@ group("gn_all") {
     }
   }
 
+  #XXX
+  #if (is_bsd) {
+    #deps -= [
+    #  "//third_party/breakpad:dump_syms($host_toolchain)",
+    #  "//third_party/breakpad:microdump_stackwalk($host_toolchain)",
+    #  "//third_party/breakpad:minidump_dump($host_toolchain)",
+    #  "//third_party/breakpad:minidump_stackwalk($host_toolchain)",
+    #]
+  #}
+
   if (is_mac && !use_qt) {
     deps += [
       "//third_party/breakpad:crash_inspector",
@@ -696,7 +706,7 @@ group("gn_all") {
         host_os == "win" && !use_qt) {
       deps += [ "//chrome/test/mini_installer:mini_installer_tests" ]
     }
-  } else if (!is_android && !is_ios && !is_fuchsia && !is_win) {
+  } else if (!is_android && !is_ios && !is_fuchsia && !is_win && !is_bsd) {
     deps += [ "//third_party/breakpad:symupload($host_toolchain)" ]
   }
 
@@ -1172,7 +1182,7 @@ if (!is_ios && !use_qt) {
       data_deps += [ "//content/web_test:web_test_common_mojom_js_data_deps" ]
     }
 
-    if (!is_win && !is_android) {
+    if (!is_win && !is_android && !is_bsd) {
       data_deps +=
           [ "//third_party/breakpad:minidump_stackwalk($host_toolchain)" ]
     }
@@ -1181,7 +1191,7 @@ if (!is_ios && !use_qt) {
       data_deps += [ "//third_party/breakpad:dump_syms($host_toolchain)" ]
     }
 
-    if (is_linux || is_chromeos) {
+    if ((is_linux && !is_bsd) || is_chromeos) {
       data_deps += [ "//third_party/breakpad:dump_syms($host_toolchain)" ]
     }
 
@@ -1580,7 +1590,7 @@ group("chromium_builder_perf") {
 
     if (is_win) {
       data_deps += [ "//chrome/installer/mini_installer:mini_installer" ]
-    } else {
+    } else if (!is_bsd) {
       data_deps +=
           [ "//third_party/breakpad:minidump_stackwalk($host_toolchain)" ]
     }
