--- src/3rdparty/chromium/base/third_party/libevent/BUILD.gn.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/base/third_party/libevent/BUILD.gn
@@ -48,13 +48,20 @@ static_library("bundled_libevent") {
       "mac/event-config.h",
     ]
     include_dirs = [ "mac" ]
-  } else if (is_linux || is_chromeos) {
+  } else if ((is_linux || is_chromeos) && !is_bsd) {
     sources += [
       "epoll.c",
       "linux/config.h",
       "linux/event-config.h",
     ]
     include_dirs = [ "linux" ]
+  } else if (is_bsd) {
+    sources += [
+      "kqueue.c",
+      "freebsd/config.h",
+      "freebsd/event-config.h",
+    ]
+    include_dirs = [ "freebsd" ]
   } else if (is_android) {
     sources += [
       "android/config.h",
