--- src/3rdparty/chromium/build/config/BUILD.gn.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/build/config/BUILD.gn
@@ -236,9 +236,7 @@ config("default_libs") {
     ]
   } else if (is_linux || is_chromeos) {
     libs = [
-      "dl",
       "pthread",
-      "rt",
     ]
   }
 }
@@ -317,7 +315,7 @@ config("executable_config") {
       "//build/config/ios:ios_dynamic_flags",
       "//build/config/ios:ios_executable_flags",
     ]
-  } else if (is_linux || is_chromeos || is_android || current_os == "aix") {
+  } else if (is_linux || is_bsd || is_chromeos || is_android || current_os == "aix") {
     configs += [ "//build/config/gcc:executable_config" ]
     if (is_chromecast) {
       configs += [ "//build/config/chromecast:executable_config" ]
