--- src/3rdparty/chromium/build/config/compiler/compiler.gni.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/build/config/compiler/compiler.gni
@@ -204,7 +204,7 @@ declare_args() {
 
 declare_args() {
   # Whether to use the gold linker from binutils instead of lld or bfd.
-  use_gold = !use_lld && !(is_chromecast && is_linux &&
+  use_gold = !is_bsd && !use_lld && !(is_chromecast && is_linux &&
                            (current_cpu == "arm" || current_cpu == "mipsel")) &&
              (((is_linux || is_chromeos_lacros) &&
                (current_cpu == "x64" || current_cpu == "x86" ||
