--- src/3rdparty/chromium/build/config/features.gni.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/build/config/features.gni
@@ -26,7 +26,7 @@ declare_args() {
   proprietary_codecs = is_chrome_branded || is_chromecast
 
   # libudev usage. This currently only affects the content layer.
-  use_udev = (is_linux || is_chromeos) && !is_chromecast
+  use_udev = (is_linux || is_chromeos) && !is_chromecast && !is_bsd
 
   use_dbus = (is_linux || is_chromeos) && !is_chromecast
 
