--- src/3rdparty/chromium/build/config/ozone.gni.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/build/config/ozone.gni
@@ -82,6 +82,9 @@ declare_args() {
       ozone_platform = "x11"
       ozone_platform_drm = true
       ozone_platform_x11 = true
+    } else if (is_bsd) {
+      ozone_platform = "x11"
+      ozone_platform_x11 = true
     } else if (is_linux || is_chromeos_lacros) {
       ozone_platform = "x11"
       ozone_platform_wayland = true
