--- src/3rdparty/chromium/cc/BUILD.gn.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/cc/BUILD.gn
@@ -639,7 +639,7 @@ cc_test_static_library("test_support") {
   if (enable_vulkan) {
     deps += [ "//gpu/vulkan/init" ]
   }
-  if (!is_android) {
+  if (!is_android && !is_bsd) {
     data_deps = [ "//third_party/mesa_headers" ]
   }
 }
@@ -856,7 +856,6 @@ cc_test("cc_unittests") {
   ]
   data_deps = [
     "//testing/buildbot/filters:cc_unittests_filters",
-    "//third_party/mesa_headers",
   ]
 
   if (is_fuchsia) {
