--- src/3rdparty/chromium/components/crash/content/browser/error_reporting/BUILD.gn.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/components/crash/content/browser/error_reporting/BUILD.gn
@@ -30,4 +30,10 @@ source_set("mock_crash_endpoint") {
     "//testing/gtest",
     "//url",
   ]
+
+  if (is_bsd) {
+    deps -= [
+      "//components/crash/core/app",
+    ]
+  }
 }
