--- src/3rdparty/chromium/components/metrics/BUILD.gn.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/components/metrics/BUILD.gn
@@ -193,6 +193,11 @@ jumbo_static_library("metrics") {
   if (is_fuchsia) {
     sources += [ "drive_metrics_provider_fuchsia.cc" ]
   }
+  
+  if (is_bsd) {
+    sources -= [ "system_memory_stats_recorder_linux.cc" ]
+  }
+
 }
 
 if (is_android) {
