--- src/3rdparty/chromium/device/bluetooth/BUILD.gn.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/device/bluetooth/BUILD.gn
@@ -303,7 +303,7 @@ component("bluetooth") {
     ]
   }
 
-  if (is_chromeos || is_linux) {
+  if (is_chromeos || (is_linux && !is_bsd)) {
     if (use_dbus && is_chromeos) {
       # This crap uses ChromeOS specific system API
       sources += [
