--- src/3rdparty/chromium/extensions/shell/BUILD.gn.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/extensions/shell/BUILD.gn
@@ -217,16 +217,24 @@ source_set("app_shell_lib") {
   }
 
   if (is_linux || is_chromeos_lacros) {
+    if (!is_bsd) {
+      sources += [
+        "app/shell_crash_reporter_client.cc",
+        "app/shell_crash_reporter_client.h",
+      ]
+    }
     sources += [
-      "app/shell_crash_reporter_client.cc",
-      "app/shell_crash_reporter_client.h",
       "browser/api/file_system/shell_file_system_delegate.cc",
       "browser/api/file_system/shell_file_system_delegate.h",
     ]
+    if (!is_bsd) {
+      deps += [
+        "//components/crash/core/app",
+        "//components/crash/core/common",
+      ]
+    }
     deps += [
       "//build:branding_buildflags",
-      "//components/crash/core/app",
-      "//components/crash/core/common",
       "//components/upload_list",
       "//components/version_info:generate_version_info",
     ]
