--- src/3rdparty/chromium/media/BUILD.gn.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/media/BUILD.gn
@@ -68,6 +68,9 @@ config("media_config") {
       defines += [ "DLOPEN_PULSEAUDIO" ]
     }
   }
+  if (use_sndio) {
+    defines += [ "USE_SNDIO" ]
+  }
   if (use_cras) {
     defines += [ "USE_CRAS" ]
   }
