--- src/3rdparty/chromium/media/audio/BUILD.gn.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/media/audio/BUILD.gn
@@ -234,7 +234,7 @@ source_set("audio") {
     ]
   }
 
-  if (is_linux || is_chromeos) {
+  if ((is_linux || is_chromeos) && !use_sndio) {
     sources += [ "linux/audio_manager_linux.cc" ]
   }
 
@@ -299,6 +299,17 @@ source_set("audio") {
     } else {
       deps += [ ":libpulse_stubs" ]
     }
+  }
+
+  if (use_sndio) {
+    libs += [ "sndio" ]
+    sources += [
+      "openbsd/audio_manager_openbsd.cc",
+      "sndio/sndio_input.cc",
+      "sndio/sndio_input.h",
+      "sndio/sndio_output.cc",
+      "sndio/sndio_output.h",
+    ]
   }
 
   if (is_fuchsia) {
