--- src/3rdparty/chromium/services/audio/BUILD.gn.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/services/audio/BUILD.gn
@@ -75,7 +75,7 @@ source_set("audio") {
     "//services/audio/public/mojom",
   ]
 
-  if (is_linux || is_chromeos) {
+  if ((is_linux || is_chromeos) && !is_bsd) {
     sources += [
       "audio_sandbox_hook_linux.cc",
       "audio_sandbox_hook_linux.h",
