--- src/3rdparty/chromium/services/device/serial/BUILD.gn.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/services/device/serial/BUILD.gn
@@ -5,7 +5,7 @@
 import("//build/config/chromeos/ui_mode.gni")
 import("//build/config/features.gni")
 
-if (is_win || ((is_linux || is_chromeos) && use_udev) || is_mac) {
+if (is_win || ((is_linux || is_chromeos) && use_udev) || is_mac || is_bsd) {
   config("platform_support") {
     visibility = [ ":serial" ]
     if (is_win) {
