--- src/3rdparty/chromium/services/network/BUILD.gn.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/services/network/BUILD.gn
@@ -274,9 +274,15 @@ jumbo_component("network_service") {
     ]
   }
 
-  if (is_linux || is_chromeos) {
+  if ((is_linux && !is_bsd) || is_chromeos) {
     deps += [
       "//sandbox/linux:sandbox_services",
+      "//sandbox/policy",
+    ]
+  }
+
+  if (is_bsd) {
+    deps += [
       "//sandbox/policy",
     ]
   }
