--- src/3rdparty/chromium/services/service_manager/BUILD.gn.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/services/service_manager/BUILD.gn
@@ -66,7 +66,7 @@ source_set("service_manager") {
     ]
   }
 
-  if (is_linux || is_chromeos) {
+  if ((is_linux || is_chromeos) && !is_bsd) {
     deps += [ "//sandbox/linux:sandbox_services" ]
   }
 }
