--- src/3rdparty/chromium/services/service_manager/public/cpp/service_executable/BUILD.gn.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/services/service_manager/public/cpp/service_executable/BUILD.gn
@@ -22,7 +22,7 @@ source_set("support") {
     "//services/service_manager/public/mojom",
   ]
 
-  if (is_linux || is_chromeos) {
+  if ((is_linux || is_chromeos) && !is_bsd) {
     deps += [
       "//sandbox/linux:sandbox",
       "//sandbox/linux:sandbox_services",
