--- src/3rdparty/chromium/third_party/angle/BUILD.gn.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/third_party/angle/BUILD.gn
@@ -200,7 +200,7 @@ config("extra_warnings") {
       "-Wunreachable-code",
       "-Wshorten-64-to-32",
     ]
-    if (!use_xcode_clang) {
+    if (!use_xcode_clang && !is_bsd) {
       # Mac catalyst uses a clang version that doesn't have these.
       cflags += [
         "-Wdeprecated-copy",
@@ -431,7 +431,8 @@ angle_static_library("angle_gpu_info_util") {
   if (is_linux || is_chromeos) {
     sources += libangle_gpu_info_util_linux_sources
 
-    if (angle_use_x11 && angle_has_build) {
+    # XXX Somewhere "angle_use_x11" is set to false, so we need to add is_bsd here
+    if ((angle_use_x11 || is_bsd) && angle_has_build) {
       sources += libangle_gpu_info_util_x11_sources
       deps += [ "src/third_party/libXNVCtrl:libXNVCtrl" ]
       defines += [ "GPU_INFO_USE_X11" ]
@@ -439,6 +440,7 @@ angle_static_library("angle_gpu_info_util") {
         "X11",
         "Xi",
         "Xext",
+        "GL",
       ]
     }
   }
