--- src/3rdparty/chromium/third_party/blink/renderer/BUILD.gn.orig	2021-11-25 09:20:12 UTC
+++ src/3rdparty/chromium/third_party/blink/renderer/BUILD.gn
@@ -60,6 +60,12 @@ config("inside_blink") {
       "-Wno-implicit-int-conversion",
     ]
 
+    if (is_bsd) {
+      cflags += [
+        "-Wno-implicit-int-float-conversion",
+      ]
+    }
+
     if (!is_chromeos_ash ||
         default_toolchain != "//build/toolchain/cros:target") {
       cflags += [ "-Wno-enum-float-conversion" ]
